<?xml version="1.0"?>
<package format="2">
  <name>box_publisher</name>
  <version>0.0.0</version>
  <description>The box_publisher package</description>

  <maintainer email="takeuchi@jsk.imi.i.u-tokyo.ac.jp">kosuke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
